frontend/test/should_fail/inh_attrib_model_015.gm
// A multiply inherited node attribute should be rejected when 
// it is declared on a single path through the class hierarchy

node class Type1 {
}

node class Type2 extends Type1 {
	a : float;
}

node class Type3 extends Type2 {
}

node class Type4 extends Type3 {
	a : float;
}



